@@ -1,0 +1,46 @@
+# Files that should be configured and will be used by the debhelpers as input.
+# In these files you can use @CMAKE_VARIABLES@ that will be filled out.
+# We don't glob here because then CMake won't regenerate automatically when a file is added.
+#
+# Note that CPACK_PACKAGE_NAME is assumed to be lower-case at this point.
+# If it isn't, you should lowercase it here (string( TOLOWER ...)) and the filenames,
+# because that's how Debian wants it.
+# (Alternatively, set and use a lowercase CPACK_DEBIAN_PACKAGE_NAME)
+set(DH_INPUT
+    ${CPACK_PACKAGE_NAME}.init.in
+    ${CPACK_PACKAGE_NAME}.service.in
+    ${CPACK_PACKAGE_NAME}.preinst.in
+    ${CPACK_PACKAGE_NAME}.postinst.in
+    ${CPACK_PACKAGE_NAME}.postrm.in
+)
+
+# These files (generated by dhelpers) will be copied into the control-part of the deb.
+# Files that end up in the filesystem normally (e.g. cron/init-scripts) must not be mentioned here.
+# It's a good idea to add "conffiles", as the debhelpers may generate it.
+set(DH_GENERATED_CONTROL_EXTRA
+    preinst
+    postinst
+    postrm
+    prerm
+    conffiles
+)
+
+# Set this to the debhelpers that should run,
+# dh_prep and dh_installdeb need not be listed here.
+set(DH_RUN
+    dh_installcron
+    dh_installinit
+)
+
+# At this point, CMakeDebHelper must be included (add .cmake if you have it in this directory)
+
+include(CMakeDebHelper)
+
+# CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA and CPACK_INSTALL_SCRIPT are set now, don't modify them!
+
+
+# These must be set in the PARENT_SCOPE, as this is where we'll include CPack
+# See http://www.cmake.org/Wiki/CMake:CPackPackageGenerators#DEB_.28UNIX_only.29
+
+set(CPACK_GENERATOR ${CPACK_GENERATOR} "DEB" PARENT_SCOPE)
+set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON PARENT_SCOPE)
