@@ -1,0 +1,38 @@
+#!/bin/sh
+
+set -eu
+
+USER="heka"
+GROUP="$USER"
+
+# If we use NIS then errors should be tolerated.
+if which ypwhich >/dev/null 2>&1 && ypwhich >/dev/null 2>&1
+then
+	set +e
+fi
+
+if ! getent group $GROUP >/dev/null
+then
+	addgroup --system $GROUP >/dev/null
+fi
+
+# creating user if it isn't already there
+if ! getent passwd $USER >/dev/null
+then
+        adduser \
+          --system \
+          --disabled-login \
+          --ingroup $GROUP \
+          --no-create-home \
+          --home /var/cache/hekad \
+          --gecos "heka daemon" \
+          --shell /bin/false \
+          $USER  >/dev/null
+fi
+
+# end of NIS tolerance zone
+set -e
+
+install -d -m0755 -o$USER -g$GROUP /var/cache/hekad
+
+#DEBHELPER#
