@@ -1,0 +1,17 @@
+[Unit]
+Description=heka - data collector and processor daemon
+After=network.target auditd.service
+ConditionPathExists=!/etc/heka/hekad_not_to_be_run
+
+[Service]
+EnvironmentFile=-/etc/default/heka
+User=heka
+Group=heka
+ExecStart=/usr/bin/hekad -config=/etc/heka/conf.d/
+ExecReload=/bin/kill -HUP $MAINPID
+KillMode=process
+Restart=on-failure
+StandardError=inherit
+
+[Install]
+Alias=heka.service
